# order_analytics

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
orders/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_dailystats.py  0003_alter_orderitem_sku.py  0004_alter_orderitem_sku_alter_orderitem_unique_together.py
