[project]
name = "order"
version = "0.1.0"
description = ""
authors = [
    {name = "rashid",email = "valentaine1234@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.12"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=7.1.0,<8.0.0)",
    "flower (>=2.0.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
